Adicionando Giroscópio e resposta do usuario

--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 07 17:58:35 AMT 2017
-sdk.dir=/home/fabricio/Android/Sdk
+#Tue Feb 14 06:12:48 BOT 2017
+sdk.dir=C\:\\Users\\Alberto\\AppData\\Local\\Android\\sdk1
