--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'org.greenrobot:eventbus:3.0.0'
 
 
     testCompile 'junit:junit:4.12'
