--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,18 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".MainActivity" >
+        <activity android:name=".FacebookLoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".PlayActivity" />
-        <activity android:name=".TutorialActivity" />FacebookLoginActivity
+        <activity android:name=".TutorialActivity" />
         <activity android:name=".SensorsActivity" />
         <service android:name=".ActivityRecognized" />
         <activity android:name=".ResultActivity" />
-        <activity android:name=".FacebookLoginActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity"></activity>
     </application>
 
