--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,20 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".FacebookLoginActivity" >
+        <activity android:name=".MainActivity" android:configChanges="orientation" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlayActivity" />
-        <activity android:name=".TutorialActivity" />
-        <activity android:name=".SensorsActivity" />
+        <activity android:name=".PlayActivity" android:configChanges="orientation" android:screenOrientation="portrait"/>
+        <activity android:name=".TutorialActivity" android:configChanges="orientation" android:screenOrientation="portrait"/>FacebookLoginActivity
+        <activity android:name=".SensorsActivity" android:configChanges="orientation" android:screenOrientation="portrait"/>
         <service android:name=".ActivityRecognized" />
-        <activity android:name=".ResultActivity" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".ResultActivity" android:configChanges="orientation" android:screenOrientation="portrait"/>
+        <activity android:name=".FacebookLoginActivity" />
+        <activity android:name=".LoginActivity" android:configChanges="orientation" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
